# qtplayer

./: .gitignore  CMakeLists.txt  README.md  appimage.sh  configdialog.cpp  configdialog.h  controlswidget.cpp  controlswidget.h  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h  playlistwidget.cpp  playlistwidget.h  qthelper.hpp  qtplayer.qrc  seekbar.cpp  seekbar.h  settings.cpp  settings.h  volumebar.cpp  volumebar.h
res/: qtplayer.desktop
